Eliminate build and reflection warnings